<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".PracticeLoginScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="304dp"
        android:layout_height="63dp"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="66dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:text="@string/name_view"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="280dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="5dp"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="66dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:text="@string/email_view"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="284dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="107dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:text="@string/password_view"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/grey"
        android:hint="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondary_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:fab_colorNormal="@color/black"
            app:fab_colorPressed="@color/light_salmon"
            app:fab_icon="@drawable/add_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:fab_colorNormal="@color/black"
            app:fab_colorPressed="@color/light_salmon"
            app:fab_icon="@drawable/account_icon"
            app:fab_size="mini"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="-122dp"
            app:layout_constraintBottom_toTopOf="@id/action_button"
            app:layout_constraintEnd_toEndOf="@id/action_button" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/ride_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="12dp"
            app:fab_colorNormal="@color/black"
            app:fab_colorPressed="@color/light_salmon"
            app:fab_icon="@drawable/make_ride_icon"
            app:fab_size="mini"
            app:layout_constraintBottom_toTopOf="@id/account_button"
            app:layout_constraintEnd_toEndOf="@id/account_button" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="11dp"
            app:fab_colorNormal="@color/black"
            app:fab_colorPressed="@color/light_salmon"
            app:fab_icon="@drawable/share_icon"
            app:fab_size="mini"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="123dp"
            app:layout_constraintBottom_toTopOf="@id/share_button"
            app:layout_constraintEnd_toEndOf="@id/share_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>